--- a/Updates/release-notes.css
+++ b/Updates/release-notes.css
@@ -81,9 +81,9 @@ ul {
 	line-height: 12pt;
 	list-style-type: square;
 	list-style-position: outside;
-	margin-top: 12px;
-	margin-bottom: 12px;
-	margin-left: -24px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-left: -18px;
 	padding-left: 40px
 	}
 
@@ -115,7 +115,7 @@ a:hover {
 	text-decoration: underline
 	}
 
-hr {
+hr {
 	text-decoration: none;
 	border: solid 1px #bfbfbf
 	}
