--- a/Pester to do.html/styles.css
+++ b/Pester to do.html/styles.css
@@ -11,6 +11,10 @@ font-family: "SF UI Text", sans-serif;
     font-size: 11px;
     
 }
+/* height hack to make nested divs set to 100% height work in Chrome and Firefox */
+table.whole-row, table.whole-note, table#column-header {
+    height: 1px;
+}
 table {
     border-collapse: collapse;
 }
@@ -38,6 +42,24 @@ div.column, div.note-filler > div {
 }
 tr#header div {
     display: inline-block;
+}
+div.pdf-div {
+    width: 100%;
+    position: relative;
+    display: block;
+}
+object.pdf-object {
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0; bottom: 0; left: 0; right: 0;
+}
+iframe.pdf-iframe {
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+    border: none;
 }
 td,th {
     padding: 0px;
